This file describes user-visible changes in rbldnsd.
Newer news is at the top.

0.999 (Still not official, to be released)
 - Removal of deprecated features (aka: NS record compatibility mode)
 - Adding -F flag, used to identify the log facility of the daemon.
 - fix tests for systems without ipv6 support, or when ipv6 is
   disabled in rbldnsd at compile-time
 - fix tests for API change in pydns >= 2.3.6
 - It is no longer an error to request binding to a particular
   address/port more than once. (The subsequent requests are simply
   ignored.) (This avoids confusion on certain systems/configurations
   where gethostbyname("localhost") can return 127.0.0.1 multiple
   times.)
 - Moving rbldnsd.spec file under contrib/rpm/ to match debian move
 - Updating various pointers to point to new contrib/ locations
   (both debian and rpm spec)
 - Maintenance of RPM spec file to match new file locations, versions,
   and the make dist tar file naming schema.
 - Fix for sockaddr_equal() which was missing an IPv6 case.

0.998b (21 Dec 2016)
 - Fix for memory errors on very large datasets.
   Patch by Andrew Clayton

0.998a (06 Sep 2016)
 - Minor fixes in copyright and documentation
 - bugfix: minor fix to prevent errors on newer compilers
 - Moving debian/ old directory under contrib/debian/

0.998 (05 Dec 2015)

 - bugfix: correctly handle V4MAPPED (v4 in v6) addresses, the
   original v6 prefix was wrong.  Thanks to Alex Lasoriti for
   finding the issue
 - bugfix: sometimes IP4-based datasets gave false positives when
   an IP6 dataset were present, and it was also possible to have
   false positive in IP6 datasets.  Both has been fixed.

0.997a (23 Jul 2013)

 - minor fixes/changes in packaging, no code changes.
   In particular, fixes a build failure on *BSD introduced in 0.997

0.997 (29 Jun 2013)

 - main feature of this version is ipv6 support.  Many thanks to
   Geoffrey T. Dairiki for the implementation of btrie (btrie.c) which