@@ -1,0 +1,7 @@
+# SYSTEMD Integration
+
+The files in this directory are aimed at being used when rbldnsd is compiled
+with the `--enable-systemd` option on linux.
+
+The files have been provided by Marco d'Itri, rbldnsd debian mantainer, as part of a
+ patch for rbldnsd.
